--- a/InterconnectionBike/InterconnectionBike/InterconnectionBike.vcxproj.filters
+++ b/InterconnectionBike/InterconnectionBike/InterconnectionBike.vcxproj.filters
@@ -372,9 +372,15 @@
     <None Include="stm32.xml">
       <Filter>VisualGDB settings</Filter>
     </None>
+    <ClCompile Include="..\..\Src\APPTooL.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BspConfig.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Inc\APPTooL.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
