2020/7/8 16:16 数据准备和播放函数移植成功!

--- a/InterconnectionBike/InterconnectionBike/InterconnectionBike.vcxproj.filters
+++ b/InterconnectionBike/InterconnectionBike/InterconnectionBike.vcxproj.filters
@@ -375,12 +375,27 @@
     <ClCompile Include="..\..\Src\APPTooL.c">
       <Filter>Source files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Src\application.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Src\dwt_stm32_delay.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BspConfig.h">
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Inc\APPTooL.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Inc\application.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Inc\dwt_stm32_delay.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Inc\system.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
