--- a/InterconnectionBike/InterconnectionBike/InterconnectionBike.vcxproj
+++ b/InterconnectionBike/InterconnectionBike/InterconnectionBike.vcxproj
@@ -76,7 +76,9 @@
   </ImportGroup>
   <ItemGroup />
   <ItemGroup>
+    <ClCompile Include="..\..\Src\application.c" />
     <ClCompile Include="..\..\Src\APPTooL.c" />
+    <ClCompile Include="..\..\Src\dwt_stm32_delay.c" />
     <ClCompile Include="..\..\Src\gpio.c" />
     <ClCompile Include="..\..\Src\adc.c" />
     <ClCompile Include="..\..\Src\freertos.c" />
@@ -110,7 +112,10 @@
     <ClCompile Include="..\..\Drivers\STM32F1xx_HAL_Driver\Src\stm32f1xx_hal_tim.c" />
     <ClCompile Include="..\..\Drivers\STM32F1xx_HAL_Driver\Src\stm32f1xx_hal_tim_ex.c" />
     <ClCompile Include="..\..\Drivers\STM32F1xx_HAL_Driver\Src\stm32f1xx_hal_dma.c" />
+    <ClInclude Include="..\..\Inc\application.h" />
     <ClInclude Include="..\..\Inc\APPTooL.h" />
+    <ClInclude Include="..\..\Inc\dwt_stm32_delay.h" />
+    <ClInclude Include="..\..\Inc\system.h" />
     <ClInclude Include="BspConfig.h" />
     <None Include="stm32.mak" />
     <ClCompile Include="$(BSP_ROOT)\STM32F1xxxx\StartupFiles\startup_stm32f103xb.c" />
