--- a/InterconnectionBike/InterconnectionBike/Makefile
+++ b/InterconnectionBike/InterconnectionBike/Makefile
@@ -36,7 +36,7 @@ error:
 	$(error Invalid configuration, please check your inputs)
 endif
 
-SOURCEFILES := ../../Src/APPTooL.c ../../Src/gpio.c ../../Src/adc.c ../../Src/freertos.c ../../Src/tim.c ../../Src/usart.c ../../Src/stm32f1xx_it.c ../../Src/stm32f1xx_hal_msp.c ../../Src/main.c ../../Drivers/CMSIS/Device/ST/STM32F1xx/Source/Templates/system_stm32f1xx.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c ../../Middlewares/Third_Party/FreeRTOS/Source/croutine.c ../../Middlewares/Third_Party/FreeRTOS/Source/event_groups.c ../../Middlewares/Third_Party/FreeRTOS/Source/list.c ../../Middlewares/Third_Party/FreeRTOS/Source/queue.c ../../Middlewares/Third_Party/FreeRTOS/Source/tasks.c ../../Middlewares/Third_Party/FreeRTOS/Source/timers.c ../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c ../../Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c ../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/port.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_usart.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c $(BSP_ROOT)/STM32F1xxxx/StartupFiles/startup_stm32f103xb.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
+SOURCEFILES := ../../Src/application.c ../../Src/APPTooL.c ../../Src/dwt_stm32_delay.c ../../Src/gpio.c ../../Src/adc.c ../../Src/freertos.c ../../Src/tim.c ../../Src/usart.c ../../Src/stm32f1xx_it.c ../../Src/stm32f1xx_hal_msp.c ../../Src/main.c ../../Drivers/CMSIS/Device/ST/STM32F1xx/Source/Templates/system_stm32f1xx.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c ../../Middlewares/Third_Party/FreeRTOS/Source/croutine.c ../../Middlewares/Third_Party/FreeRTOS/Source/event_groups.c ../../Middlewares/Third_Party/FreeRTOS/Source/list.c ../../Middlewares/Third_Party/FreeRTOS/Source/queue.c ../../Middlewares/Third_Party/FreeRTOS/Source/tasks.c ../../Middlewares/Third_Party/FreeRTOS/Source/timers.c ../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c ../../Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c ../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/port.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_usart.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c $(BSP_ROOT)/STM32F1xxxx/StartupFiles/startup_stm32f103xb.c ../../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
 EXTERNAL_LIBS := 
 EXTERNAL_LIBS_COPIED := $(foreach lib, $(EXTERNAL_LIBS),$(BINARYDIR)/$(notdir $(lib)))
 
@@ -182,7 +182,15 @@ $(BINARYDIR)/%.o : %.cxx $(all_make_files) |$(BINARYDIR)
 #VisualGDB: GeneratedRules				#<--- All lines below are auto-generated. Remove this line to suppress auto-generation of file rules.
 
 
+$(BINARYDIR)/application.o : ../../Src/application.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
 $(BINARYDIR)/APPTooL.o : ../../Src/APPTooL.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/dwt_stm32_delay.o : ../../Src/dwt_stm32_delay.c $(all_make_files) |$(BINARYDIR)
 	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
 
 
